Add swagger to handlers/products.go and handlers/users.go, fix small things
